--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   expandable: 5.0.1
   firebase_core: 1.19.1
   firebase_core_platform_interface: 4.4.3
-  firebase_core_web: 1.6.6
+  firebase_core_web: 2.0.2 #check
   flutter_animate: 1.0.0
   flutter_cache_manager: 3.3.0
   font_awesome_flutter: 10.2.1
