--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
   cloud_firestore_platform_interface: 5.5.10
   cloud_firestore_web: 2.6.19
   expandable: 5.0.1
-  firebase_core: 1.19.1
+  firebase_core: 2.4.0 #check
   firebase_core_platform_interface: 4.5.2 #check
   firebase_core_web: 2.0.2 #check
   flutter_animate: 1.0.0
