--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   cached_network_image: 3.2.1
   cloud_firestore: 3.2.1
   cloud_firestore_platform_interface: 5.5.10
-  cloud_firestore_web: 2.6.19
+  cloud_firestore_web: 3.1.1 #check
   expandable: 5.0.1
   firebase_core: 2.4.0 #check
   firebase_core_platform_interface: 4.5.2 #check
