--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,12 +36,12 @@ dependencies:
   firebase_core: 2.4.0 #check
   firebase_core_platform_interface: 4.5.2 #check
   firebase_core_web: 2.0.2 #check
-  flutter_animate: 1.0.0
+  flutter_animate: 4.1.1+1 
   flutter_cache_manager: 3.3.0
   font_awesome_flutter: 10.2.1
   from_css_color: 2.0.0
   go_router: 3.1.0
-  google_fonts: 3.0.1
+  google_fonts: 4.0.3
   intl: 0.17.0
   json_path: 0.4.1
   json_serializable: 6.6.1
@@ -50,7 +50,7 @@ dependencies:
   provider: 6.0.4 #check
   rrule: ^0.2.10
   shared_preferences: 2.0.15
-  sqflite: 2.2.0+2
+  sqflite: 2.2.6
   timeago: 3.2.2
   url_launcher: 6.1.10
 
