--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
     sdk: flutter
   auto_size_text: 3.0.0
   cached_network_image: 3.2.1
+  dropdown_button2: 2.0.0
   expandable: 5.0.1
   flutter_animate: 4.1.1+1
   flutter_cache_manager: 3.3.0
@@ -35,7 +36,7 @@ dependencies:
   go_router: 7.1.1
   google_fonts: 4.0.3
   intl: 0.18.0
-  json_path: 0.4.1
+  json_path: 0.6.2
   page_transition: 2.0.4
   path_provider: 2.0.14
   path_provider_android: 2.0.25
