--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,8 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   auto_size_text: 3.0.0
-  cached_network_image: 3.2.1
+  cached_network_image: 3.3.1
+  collection: 1.18.0
   dropdown_button2: 2.3.9
   expandable: 5.0.1
   flutter_animate: 4.1.1+1
@@ -34,7 +35,7 @@ dependencies:
   font_awesome_flutter: 10.6.0
   from_css_color: 2.0.0
   go_router: 7.1.1
-  google_fonts: 4.0.3
+  google_fonts: 6.1.0
   intl: 0.18.1
   json_path: 0.6.2
   page_transition: 2.1.0
@@ -60,6 +61,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+
+dependency_overrides:
+  http: 1.2.0
+  uuid: ^4.0.0
 
 dev_dependencies:
   flutter_lints: 3.0.0
@@ -96,6 +101,7 @@ flutter:
       fonts:
         - asset: assets/fonts/mariko-icons-v4.ttf
 
+  
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
@@ -121,3 +127,4 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
