--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,20 +30,20 @@ dependencies:
   collection: 1.18.0
   dropdown_button2: 2.3.9
   expandable: 5.0.1
-  flutter_animate: 4.1.1+1
+  flutter_animate: 4.5.0
   flutter_cache_manager: 3.3.1
   font_awesome_flutter: 10.6.0
   from_css_color: 2.0.0
   go_router: 12.1.3
   google_fonts: 6.1.0
-  intl: 0.18.1
-  json_path: 0.6.2
+  intl: 0.19.0
+  json_path: 0.7.2
   page_transition: 2.1.0
-  path_provider: 2.0.14
-  path_provider_android: 2.0.25
-  path_provider_foundation: 2.2.2
-  path_provider_platform_interface: 2.0.6
-  provider: 6.0.5
+  path_provider: 2.1.3
+  path_provider_android: 2.2.5
+  path_provider_foundation: 2.4.0
+  path_provider_platform_interface: 2.1.2
+  provider: 6.1.2
   rrule: ^0.2.10
   shared_preferences: 2.2.2
   shared_preferences_android: 2.2.1
@@ -51,7 +51,7 @@ dependencies:
   shared_preferences_platform_interface: 2.3.1
   shared_preferences_web: 2.2.1
   sqflite: 2.2.6
-  timeago: 3.2.2
+  timeago: 3.6.1
   url_launcher: 6.2.5
   url_launcher_android: 6.3.0
   url_launcher_ios: 6.2.5
@@ -63,12 +63,12 @@ dependencies:
   cupertino_icons: ^1.0.0
 
 dependency_overrides:
-  http: 1.2.0
+  http: 1.2.1
   uuid: ^4.0.0
 
 dev_dependencies:
-  flutter_lints: 3.0.0
-  lints: 3.0.0
+  flutter_lints: 4.0.0
+  lints: 4.0.0
 
   flutter_test:
     sdk: flutter
