--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,50 +26,59 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   auto_size_text: 3.0.0
-  cached_network_image: 3.3.1
+  cached_network_image: 3.4.1
+  cached_network_image_platform_interface: 4.1.1
+  cached_network_image_web: 1.3.1
   collection: 1.18.0
   dropdown_button2: 2.3.9
   expandable: 5.0.1
   flutter_animate: 4.5.0
-  flutter_cache_manager: 3.3.1
-  font_awesome_flutter: 10.6.0
+  flutter_cache_manager: 3.4.1
+  font_awesome_flutter: 10.7.0
   from_css_color: 2.0.0
   go_router: 12.1.3
   google_fonts: 6.1.0
   intl: 0.19.0
   json_path: 0.7.2
   page_transition: 2.1.0
-  path_provider: 2.1.3
-  path_provider_android: 2.2.5
+  path_provider: 2.1.4
+  path_provider_android: 2.2.10
   path_provider_foundation: 2.4.0
+  path_provider_linux: 2.2.1
   path_provider_platform_interface: 2.1.2
+  path_provider_windows: 2.2.1
   provider: 6.1.2
   rrule: ^0.2.10
-  shared_preferences: 2.2.2
-  shared_preferences_android: 2.2.1
-  shared_preferences_foundation: 2.3.4
-  shared_preferences_platform_interface: 2.3.1
-  shared_preferences_web: 2.2.1
-  sqflite: 2.2.6
+  shared_preferences: 2.3.2
+  shared_preferences_android: 2.3.2
+  shared_preferences_foundation: 2.5.2
+  shared_preferences_linux: 2.4.1
+  shared_preferences_platform_interface: 2.4.1
+  shared_preferences_web: 2.4.2
+  shared_preferences_windows: 2.4.1
+  sqflite: 2.3.3+1
+  sqflite_common: 2.5.4+3
   timeago: 3.6.1
-  url_launcher: 6.2.5
-  url_launcher_android: 6.3.0
-  url_launcher_ios: 6.2.5
+  url_launcher: 6.3.0
+  url_launcher_android: 6.3.10
+  url_launcher_ios: 6.3.1
+  url_launcher_linux: 3.2.0
+  url_launcher_macos: 3.2.1
   url_launcher_platform_interface: 2.3.2
-
+  url_launcher_web: 2.3.3
+  url_launcher_windows: 3.1.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
 
 dependency_overrides:
-  http: 1.2.1
+  http: 1.2.2
   uuid: ^4.0.0
 
 dev_dependencies:
   flutter_lints: 4.0.0
   lints: 4.0.0
-
   flutter_test:
     sdk: flutter
 
@@ -90,9 +99,10 @@ flutter:
     - assets/images/
     - assets/videos/
     - assets/audios/
-    - assets/lottie_animations/
     - assets/rive_animations/
     - assets/pdfs/
+    - assets/jsons/
+
   fonts:
     - family: Mariko
       fonts:
@@ -101,7 +111,7 @@ flutter:
       fonts:
         - asset: assets/fonts/mariko-icons-v4.ttf
 
-  
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
